[metadata]
name = logging_handler
version = 0.1.0
description = A Python logging handler with Splunk support for events and metrics
author = Matt Peters
license = MIT
classifiers =
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    Topic :: System :: Logging
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    requests>=2.28.0
    urllib3>=2.0.0

[options.package_data]
logging_handler = ["py.typed"]

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0